Added and changed a bunch of things like levels and stuff

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
     </canvas>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-    <script src="sylvester.js"></script>
-    <script src="loader.js"></script>
+    <script src="tools/sylvester.js"></script>
+    <script src="tools/loader.js"></script>
 </body>
 </html>
