--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </canvas>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+    <script src="http://davidbau.com/encode/seedrandom.min.js"></script>
     <script src="tools/sylvester.js"></script>
     <script src="tools/loader.js"></script>
 </body>
